New stuff to make jobs runnable standalone

--- a/templates/jobcenter/linkfinder.phtml
+++ b/templates/jobcenter/linkfinder.phtml
@@ -1,2 +1,14 @@
-<h1>Nothing to see here.</h1>
-<?php echo print_r($this->result, true) ?>
+<h1>ISSN Finder.</h1>
+<h3>This job finds all ISSN and calls the LinkedDataWrapper for each of them.</h3>
+<p>Nr of ISSN:
+<!--    --><?php //echo print_r(count($this->listOfIssn), true) ?>
+</p>
+
+<p>
+    <a class="button" id="issnfinder-button">Start</a>
+</p>
+
+<script type="text/javascript">
+<!--encode the list of issn to a json element to make it usable via jQuery-->
+//var listOfIssn = <?php //echo json_encode($this->listOfIssn); ?>//;
+</script>
